--- a/plugin.xml
+++ b/plugin.xml
@@ -18,11 +18,11 @@
     <author>Sebastián Katzer</author>
 
     <!-- cordova -->
-    <engines>
+   <!-- <engines>
         <engine name="cordova" version=">=3.6.0" />
         <engine name="cordova-plugman" version=">=4.3.0" />
         <engine name="cordova-windows" version=">=4.2.0" />
-    </engines>
+    </engines>-->
 
     <!-- dependencies -->
     <dependency id="cordova-plugin-device" />
