--- a/plugin.xml
+++ b/plugin.xml
@@ -25,8 +25,8 @@
     </engines>-->
 
     <!-- dependencies -->
-    <dependency id="cordova-plugin-device" />
-    <dependency id="cordova-plugin-app-event" />
+    <!--<dependency id="cordova-plugin-device" />
+    <dependency id="cordova-plugin-app-event" />-->
 
     <!-- info -->
     <info>
